--- a/infos/templates/infos/contact.html
+++ b/infos/templates/infos/contact.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "infos/base.html" %}
+{% block title %} {{ title }} {% endblock title %}
+{% block content %}
+    <h1> Kontakt </h1>
+    <h3>Strona w budowie...</h3>
+{% endblock content %}
