--- a/infos/templates/infos/home.html
+++ b/infos/templates/infos/home.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{title}}</title>
-</head>
-<body>
-    <h1>This is home page from template</h1>
-</body>
-</html>
+{% extends "infos/base.html" %}
+{% block title %} {{ title }} {% endblock title %}
+{% block content %}
+    <h1> Witaj </h1>
+    <p>Strona do mojego portfolio</p>
+    <h3>Strona w budowie...</h3>
+{% endblock content %}
