--- a/infos/templates/infos/contact.html
+++ b/infos/templates/infos/contact.html
@@ -3,4 +3,5 @@
 {% block content %}
     <h1> Kontakt </h1>
     <h3>Strona w budowie...</h3>
+    <a href="{% url 'home' %}">Powrót do strony głównej...</a>
 {% endblock content %}
