--- a/infos/templates/infos/home.html
+++ b/infos/templates/infos/home.html
@@ -2,6 +2,6 @@
 {% block title %} {{ title }} {% endblock title %}
 {% block content %}
     <h1> Witaj </h1>
-    <p>Strona do mojego portfolio</p>
+    <p>Na stronie znajdziesz informacje o mnie jak również o ukończonych przeze mnie projektach.</p>
     <h3>Strona w budowie...</h3>
 {% endblock content %}
