--- a/infos/templates/infos/base.html
+++ b/infos/templates/infos/base.html
@@ -18,10 +18,10 @@
           <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'about' %}">About</a>
+          <a class="nav-link" href="{% url 'about' %}">O mnie</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+          <a class="nav-link" href="{% url 'contact' %}">Kontakt</a>
         </li>
       </ul>
     </div>
