Add form to contact page

--- a/infos/templates/infos/about.html
+++ b/infos/templates/infos/about.html
@@ -3,7 +3,17 @@
 {% block content %}
     {% load static %}
     <img src="{% static 'infos/Snake_400x400.png' %}" class="img-thumbnail" alt="My photo">
-    <h1> O mnie </h1>
-    <h3>Strona w budowie...</h3>
+    <h1> Jacek Bakunski </h1>
+    <p>I'm a 46-year-old secretary at a law firm who enjoys extreme ironing, running and shopping.
+        I'm inspiring and inspiring, but can also be very lazy and a bit unstable.
+        I am addicted to shopping, something which my friend Jan Brittany O'Doherty pointed out when I was 17.
+        The problem intensified in 1996.
+        I've lost three jobs as a result of my addiction, specifically: trainee tradesperson,
+        sous chef and sales assistant at office supplies store.
+        I am Mexican who defines himself as straight. I finished school and then left academia.
+        Physically, I'm slightly overweight but otherwise in good shape. I am very short with chocolate skin, grey hair and yellow eyes.
+        I grew up in a middle class neighbourhood.
+        I'm currently in a relationship with Macy Esme Ross. Macy is 14 years older than me and works as a novelist.
+    </p>
     <a href="{% url 'home' %}">Powrót do strony głównej...</a>
 {% endblock content %}
