--- a/infos/templates/infos/home.html
+++ b/infos/templates/infos/home.html
@@ -2,6 +2,5 @@
 {% block title %} {{ title }} {% endblock title %}
 {% block content %}
     <h1> Witaj </h1>
-    <p>Na stronie znajdziesz informacje o mnie jak również o ukończonych przeze mnie projektach.</p>
-    <h3>Strona w budowie...</h3>
+    <p>To strona o mnie i moich projektach.</p>
 {% endblock content %}
