--- a/infos/templates/infos/about.html
+++ b/infos/templates/infos/about.html
@@ -15,5 +15,6 @@
         I grew up in a middle class neighbourhood.
         I'm currently in a relationship with Macy Esme Ross. Macy is 14 years older than me and works as a novelist.
     </p>
-    <a href="{% url 'home' %}">Powrót do strony głównej...</a>
+    <a href="{% url 'home' %}" class="btn btn-primary" tabindex="-1"
+       role="button" aria-disabled="true">Powrót do strony głównej...</a>
 {% endblock content %}
