--- a/infos/templates/infos/base.html
+++ b/infos/templates/infos/base.html
@@ -23,6 +23,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'contact' %}">Kontakt</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'posts:list' %}">Blog</a>
+        </li>
       </ul>
     </div>
   </div>
