--- a/infos/templates/infos/base.html
+++ b/infos/templates/infos/base.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="{% url 'contact' %}">Kontakt</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'posts:list' %}">Blog</a>
+          <a class="nav-link" href="{% url 'posts:posts_list' %}">Blog</a>
         </li>
       </ul>
     </div>
