--- a/infos/templates/infos/base.html
+++ b/infos/templates/infos/base.html
@@ -26,6 +26,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'posts:posts_list' %}">Blog</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'posts:authors_list' %}">Authors</a>
+        </li>
       </ul>
     </div>
   </div>
