--- a/posts/templates/posts/authors_list.html
+++ b/posts/templates/posts/authors_list.html
@@ -1,10 +1,13 @@
 {% extends "infos/base.html" %}
 {% block title %} {{ title }} {% endblock title %}
 {% block content %}
+    <a href="{% url 'posts:author_form' %}" class="btn btn-secondary" tabindex="-1"
+       role="button" aria-disabled="true">Add new author</a>
+    </br>
+    </br>
     <ul class="list-group">
         {% for a in authors %}
             <li class="list-group-item"><a href="{% url 'posts:author_details' a.id %}"
-                                           class="btn btn-secondary"
                                            tabindex="-1" role="button"
                                            aria-disabled="false">{{ a.nick }}</a></li>
         {% endfor %}
