--- a/posts/templates/posts/authors_list.html
+++ b/posts/templates/posts/authors_list.html
@@ -2,7 +2,7 @@
 {% block title %} {{ title }} {% endblock title %}
 {% block content %}
     <a href="{% url 'posts:author_form' %}" class="btn btn-secondary" tabindex="-1"
-       role="button" aria-disabled="true">Add new author</a>
+       role="button" aria-disabled="true">Dodaj nowego autora</a>
     </br>
     </br>
     <ul class="list-group">
