--- a/infos/templates/infos/base.html
+++ b/infos/templates/infos/base.html
@@ -27,7 +27,7 @@
           <a class="nav-link" href="{% url 'posts:posts_list' %}">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'posts:authors_list' %}">Authors</a>
+          <a class="nav-link" href="{% url 'posts:authors_list' %}">Autorzy</a>
         </li>
       </ul>
     </div>
