--- a/posts/templates/posts/author_details.html
+++ b/posts/templates/posts/author_details.html
@@ -17,5 +17,5 @@
    </table>
     </br>
     <a href="{% url 'posts:authors_list' %}" class="btn btn-primary" tabindex="-1"
-       role="button" aria-disabled="true">Powrót do strony głównej...</a>
+       role="button" aria-disabled="true">Powrót do strony głównej</a>
 {% endblock content %}
