--- a/posts/templates/posts/authors_list.html
+++ b/posts/templates/posts/authors_list.html
@@ -14,5 +14,5 @@
     </ul>
     </br>
     <a href="{% url 'home' %}" class="btn btn-primary" tabindex="-1"
-       role="button" aria-disabled="true">Powrót do strony głównej...</a>
+       role="button" aria-disabled="true">Powrót do strony głównej</a>
 {% endblock content %}
