--- a/posts/templates/posts/post_details.html
+++ b/posts/templates/posts/post_details.html
@@ -25,5 +25,5 @@
    </table>
     </br>
     <a href="{% url 'posts:posts_list' %}" class="btn btn-primary" tabindex="-1"
-       role="button" aria-disabled="true">Powrót do strony głównej...</a>
+       role="button" aria-disabled="true">Powrót do strony głównej</a>
 {% endblock content %}
