--- a/infos/templates/infos/about.html
+++ b/infos/templates/infos/about.html
@@ -16,5 +16,5 @@
         I'm currently in a relationship with Macy Esme Ross. Macy is 14 years older than me and works as a novelist.
     </p>
     <a href="{% url 'home' %}" class="btn btn-primary" tabindex="-1"
-       role="button" aria-disabled="true">Powrót do strony głównej...</a>
+       role="button" aria-disabled="true">Powrót do strony głównej</a>
 {% endblock content %}
