--- a/infos/templates/infos/contact.html
+++ b/infos/templates/infos/contact.html
@@ -20,5 +20,5 @@
     </form>
     <br></br>
     <a href="{% url 'home' %}" class="btn btn-primary" tabindex="-1"
-       role="button" aria-disabled="true">Powrót do strony głównej...</a>
+       role="button" aria-disabled="true">Powrót do strony głównej</a>
 {% endblock content %}
