--- a/posts/templates/posts/post_form.html
+++ b/posts/templates/posts/post_form.html
@@ -10,5 +10,5 @@
     </form>
     </br>
     <a href="{% url 'posts:posts_list' %}" class="btn btn-primary" tabindex="-1"
-       role="button" aria-disabled="true">Powrót do strony głównej...</a>
+       role="button" aria-disabled="true">Powrót do strony głównej</a>
 {% endblock content %}
