--- a/posts/templates/posts/authors_list.html
+++ b/posts/templates/posts/authors_list.html
@@ -13,6 +13,36 @@
         {% endfor %}
     </ul>
     </br>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-end">
+            {% if authors.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ authors.previous_page_number}}">Previous</a>
+            </li>
+            {% else %}
+            <li class="page-item disabled">
+                 <a class="page-link">Previous</a>
+            </li>
+            {% endif %}
+            {% for p in pages %}
+                {% if p == authors.number %}
+                    <li class="page-item active"><a class="page-link" href="?page={{ p }}">{{ p }}</a></li>
+                {% else %}
+                    <li class="page-item"><a class="page-link" href="?page={{ p }}">{{ p }}</a></li>
+                {% endif %}
+            {% endfor %}
+            {% if authors.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ authors.next_page_number }}">Next</a>
+            </li>
+            {% else %}
+            <li class="page-item">
+                <a class="page-link disabled">Next</a>
+            </li>
+            {% endif %}
+        </ul>
+    </nav>
+    </br>
     <a href="{% url 'home' %}" class="btn btn-primary" tabindex="-1"
        role="button" aria-disabled="true">Powrót do strony głównej</a>
 {% endblock content %}
